added touch and refactored replace
